--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
         <button class="cart-button " type="button ">Корзина</button>
     </header>
     <main>
+        <span class="goods-title">Товары:</span>
         <div class="goods-list "></div>
+        <span class="cart-title">Корзина:</span>
+        <div class="cart-list"></div>
     </main>
 </body>
 
